# azure-sdk-for-rust

./: .gitignore  AGENTS.md  Cargo.toml  PREPUSH_RESULTS.md  README.md  devenv.nix
sdk/cosmos/azure_data_cosmos_driver/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
sdk/cosmos/azure_data_cosmos_driver/docs/: QueryEngineSpec.md
sdk/cosmos/azure_data_cosmos_driver/src/: lib.rs  support_policy.rs  testing.rs  transport.rs
sdk/cosmos/azure_data_cosmos_driver/src/async_runtime/: mod.rs  tokio.rs
sdk/cosmos/azure_data_cosmos_driver/src/builders/: mod.rs
sdk/cosmos/azure_data_cosmos_driver/src/diagnostics/: diagnostics_context.rs  execution_context.rs  mod.rs  request_diagnostics.rs  request_event.rs  serialization.rs
sdk/cosmos/azure_data_cosmos_driver/src/driver/: cosmos_driver.rs  mod.rs  runtime.rs  runtime_builder.rs  tokio_runtime.rs
sdk/cosmos/azure_data_cosmos_driver/src/error/: cosmos_status.rs
sdk/cosmos/azure_data_cosmos_driver/src/fault_injection/: condition.rs  fault_injecting_factory.rs  http_client.rs  mod.rs  result.rs  rule.rs
sdk/cosmos/azure_data_cosmos_driver/src/in_memory_emulator/: client.rs
sdk/cosmos/azure_data_cosmos_driver/src/models/: account_reference.rs  activity_id.rs  connection_string.rs  container_properties.rs  continuation_token.rs  cosmos_headers.rs  cosmos_operation.rs  cosmos_resource_reference.rs  cosmos_response.rs  cosmos_result.rs  cosmos_status.rs  dedicated_gateway.rs  diagnostics.rs  effective_partition_key.rs  etag.rs  feed_range.rs  (+20 more)
sdk/cosmos/azure_data_cosmos_driver/tests/: multi_region_failover.rs
(+228 files in other folders)
